@startuml

title __COMPANY's Class Diagram__\n

  package com.company {
    class Adult {
        - childID : ArrayList<Child>
        + Adult()
        + connectChild()
        + displayChildren()
    }
  }
  

  package com.company {
    class Child {
        + Child()
        + getParentID1()
        + getParentID2()
        + removeParent()
        + isSibling()
        + isChild()
        + displayParents()
    }
  }
  

  package com.company {
    class Driver {
        ~ userList : ArrayList<User>
        + Driver()
        + addUser()
        + deleteUser()
        + searchUser()
        + exists()
        + run()
    }
  }
  

  package com.company {
    class MiniNet {
        {static} + main()
    }
  }
  

  package com.company {
    abstract class User {
        # name : String
        # status : String
        # image : String
        # age : int
        # friendList : ArrayList<User>
        + getName()
        + getStatus()
        + getImage()
        + getAge()
        + displayDetails()
        + addFriend()
        + isFriend()
        + updateprofile()
    }
  }
  

  Adult -up-|> User
  Child -up-|> User
  Child o-- Adult : parentID1
  Child o-- Adult : parentID2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
